# transformer_parameter_analysis

./: .gitignore  AGENTS.md  README.md  README_DEMO.md  demo_usage.py  pyproject.toml  requirements.txt  run.py  test_analysis.py
ai_block_research.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/benchmarks/: benchmark_results_5000_768.json
data/outputs/: qwen3_matrix_analysis.csv  test_gpu_analysis.csv
data/outputs/Qwen-Qwen3-4B/: cluster_representatives.json  clustering_results.json  qwen3-4b_embedding.csv  qwen3_matrix_analysis.csv  report.md  transformer_matrix_analysis.csv
data/outputs/bert-base-uncased/: clustering_results.json  embedding_clusters_summary.csv  report.md  transformer_matrix_analysis.csv
data/outputs/bert_base_uncased/: clustering_results.json  report.md  transformer_matrix_analysis.csv
data/outputs/deepseek-ai-DeepSeek-R1-Distill-Llama-8B/: clustering_results.json  embedding_clusters_summary.csv  report.md  transformer_matrix_analysis.csv
docs/: README_en.md  README_zh.md
scripts/: analyze.py  download.py  embedding_analysis.ipynb  embedding_analysis.py  performance_benchmark.py  quick_test.py  run.py  test_anova.py  transformer_analysis.py
