[project]
name = "ai-block-research"
version = "0.1.0"
description = "Download, read and analyze LLM parameters"
authors = [{ name = "chenfeng" }]
requires-python = ">=3.10"
dependencies = [
  "transformers>=4.41.0",
  "huggingface_hub>=0.23.0",
  "safetensors>=0.4.3",
  "torch>=2.2.0",
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "scikit-learn>=1.3.0",
  "matplotlib>=3.7.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
